--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "molde"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+syn = "1.0.81"
+quote = "1.0.10"
+proc-macro2 = "1.0.32"
+
+[lib]
+proc-macro = true
